[package]
name = "poker-odds-calc"
version = "0.1.0"
authors = ["Reinis Muiznieks <muiznieks.reinis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
maplit = "1.0.2"
strum = "0.21.0"
strum_macros = "0.21.1"
rand = "0.8.4"
itertools = "0.10.1"
rayon = "1.5"
